[package]
name = "xgt"
version = "0.5.0"
edition = "2021"
authors = ["Anicet Ebou <anicet.ebou@gmail.com>"]
description = "xgt enables efficient querying and parsing of GTDB data"
homepage = "https://github.com/Ebedthan/xgt"
categories = ["command-line-utilities"]
keywords = ["bioinformatics"]
rust-version = "1.70.0"
repository = "https://github.com/Ebedthan/xgt"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.5.35", features = ["derive"] }
regex = { version = "1.11" }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
ureq = { version = "2.6.2", features = ["json", "native-tls"] }
native-tls = "0.2"

[dev-dependencies]
mockito = "1.7"
tempfile = "3.8"

[profile.release]
opt-level = 3
debug = true
overflow-checks = false
lto = 'thin'
panic = 'abort'
incremental = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "xgt"
path = "src/main.rs"
bench = false

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.0"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = "github"
# Which actions to run on pull requests
pr-run-mode = "plan"
